[package]
name = "rust-crash-audit"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }
octocrab = "0.41"
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
